#111, #110, #109 Major fix up of the Java UI for Linux and Windows 7. Scroll bars working, global libraries flag added, support for locking down the menu variable name added, other minor fixes.